# uav-tui-dashboard

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: default.toml
docs/: README.md  REVIEW_2025-09-28.md  architecture.md  changelog.md  documentation_guidelines.md  logging.example.toml  ros2_integration.md
docs/changelog/: 2025-10-14.md
docs/developer_guide/: development.md  git_standards.md
docs/guides/: features.md  ros2_integration.md
docs/user_guide/: config.md
src/: dashboard.py
src/uav_tui_dashboard/: __init__.py  __main__.py  cli.py  logging_config.py  shutdown.py
src/uav_tui_dashboard/core/: __init__.py  base.py  datasource.py  models.py  parsers.py  ros.py  sim.py  snapshots.py  status.py
src/uav_tui_dashboard/ui/: __init__.py  app.py  dashboard.css
tests/: test_placeholder.py  test_snapshots.py
tests/core/: test_parsers.py
trash/: legacy_requirements.txt
trash/original_docs/guides/: features.md  ros2_integration.md
trash/original_tests/: test_logging_config.py  test_vehicle_status.py
