[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-tui-dashboard"
version = "0.1.0"
description = "UAV TUI Dashboard - 基于 Textual 的无人机状态监控终端界面"
authors = [
    {name = "GitHub Copilot", email = "copilot@github.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual==6.1.0",
    "rich==14.1.0",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "linkify-it-py==2.0.3",
    "platformdirs==4.4.0",
    "Pygments==2.19.2",
    "typing_extensions==4.15.0",
    "tomli==2.0.1; python_version < '3.11'",
]

[project.scripts]
uav-dashboard = "uav_tui_dashboard.cli:main"

[project.optional-dependencies]
ros2 = [
    "rclpy>=1.0.0",
    "PyYAML>=6.0.0",
    "jinja2>=3.1.0",
    "typeguard>=4.0.0",
    "lark>=1.0.0",
    "numpy>=1.23.0",
]

[tool.setuptools.package-data]
"uav_tui_dashboard.ui" = ["*.css"]

[project.urls]
Homepage = "https://github.com/xmu795/uav-tui-dashboard"
Repository = "https://github.com/xmu795/uav-tui-dashboard.git"
Issues = "https://github.com/xmu795/uav-tui-dashboard/issues"

[tool.setuptools.packages.find]
where = ["src"]